force-app/main/default/objects/Housing_Strength_or_Challenge__c/Housing_Strength_or_Challenge__c.object-meta.xml
<CustomObject>
    <label>Housing Strength or Challenge</label>
    <nameField>
        <label>Housing Strength or Challenge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Strengths or Challenges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>