force-app/main/default/objects/Housing_Strength_or_Challenge__c/fields/Housing_Str_or_Chlg_Count__c.field-meta.xml
<CustomField>
    <fullName>Housing_Str_or_Chlg_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Str or Chlg Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>