force-app/main/default/objects/Housing_Strength_or_Challenge__c/fields/Housing_Str_or_Chlg_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Str_or_Chlg_Ownership_Status__c</fullName>
    <formula>IF( 
   Housing_StrChlg_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Str or Chlg Ownership Status</label>
    <type>Text</type>
</CustomField>