force-app/main/default/objects/Housing_Strength_or_Challenge__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Housing_Strengths_and_Challenges</valueSetName>
    </valueSet>
</CustomField>