force-app/main/default/objects/Housing_Strength_or_Challenge__c/recordTypes/Challenge.recordType-meta.xml
<RecordType>
    <fullName>Challenge</fullName>
    <active>true</active>
    <label>Challenge</label>
</RecordType>