force-app/main/default/objects/Housing_Strength_or_Challenge__c/recordTypes/Strength.recordType-meta.xml
<RecordType>
    <fullName>Strength</fullName>
    <active>true</active>
    <label>Strength</label>
</RecordType>